# Windscribe-Signup

./: README.MD  email_confirmation.py  generator.py  header.py  ovpn_config_read.py  proxy.py  pyproject.toml  readimage.py  registration.py  requirements.txt  servers.py  windscribe.py
config_files/: Config_Files_Download_Directory
test/: test.py  test_email.py  test_page_errors.py  threading_tests.py
